@@ -1,18 +1,18 @@
-34484886eac34e0c7b3e0a7a3581b29a *DESCRIPTION
-f764416b28695b618b4096640b7e0316 *NAMESPACE
-9dc8728d05ecb114f0fb262a3b20a028 *NEWS
-2030a9613771642322c70d3ca38429fa *R/aacomp.R
-2f89dba1a06741f07119e33c5086cb2a *R/aindex.R
-f5fd23f4bcab406f5652b7fa1261b8c0 *R/boman.R
-5a37e5aeb3c13bb7b63e97f514290c12 *R/charge.R
-e15de55ed1dc044a0a401f948d379454 *R/hmoment.R
-eb28958f2b666826a7982ea5a0bbe939 *R/hydrophobicity.R
-71cee2c28b19b40d78c726399e501c69 *R/instaindex.R
-a74e01bbf78b6d50ea27bd63060d586b *R/kidera.R
-482bb94cf605ae6e0f68d27d599d2909 *R/lengthpep.R
-d8b4e1d573537fe01718d52a37fd7873 *R/membpos.R
-3a96bf04446cfd1b86468a7775b9afd5 *R/mw.R
-53412623a46430d42d86808457fa9087 *R/pI.R
+bf493ff5416d02f81a8fa86b21704fe1 *DESCRIPTION
+dd35b5158990070ab34d3c7075257f02 *NAMESPACE
+efa8f26a066cc252ee4b8024205649c3 *NEWS
+0af9c0510f6c89b3bb2f9aa2cc829783 *R/aacomp.R
+4e9b6a9187cc3965e2a465fb0eef67be *R/aindex.R
+8247e32c51a4243df021874157d2b23e *R/boman.R
+ebddab05d81ad3aca5e9abf884b98748 *R/charge.R
+839295865931d2db1a1a2e4d594c28bb *R/hmoment.R
+b15b006074c707cf35b7352377232d47 *R/hydrophobicity.R
+cc701e73ca01a6192895fde9efc1ddd5 *R/instaindex.R
+47ec83f73a6dc4ca5ca57fc5f1437645 *R/kidera.R
+4f6a13db0fa00fe048b00a3095a13afc *R/lengthpep.R
+9d464c09eff093046b56372f891c580f *R/membpos.R
+17a1e1742e0ebe2fabfd13a99f401a8f *R/mw.R
+766af8a77bdee96695fa26555d2dd8fa *R/pI.R
 83f515c9998ee587bb00ff5b7b20e893 *R/plot.xvg.R
 735747274824a1c96a39e8ec57b6c593 *R/read.xvg.R
 872fdf7b1e7790d43d81b92a659b3f55 *data/H.RData
@@ -36,7 +36,7 @@ bdbc8ed908ba1428a57ddf6073b5c5ea *inst/tests/runit.mw.R
 099bbd512044524791c66106256617c2 *inst/xvg-files/POPG.xvg
 ae5ed083b17c6c5f9ad089017ffe8e24 *inst/xvg-files/epot.xvg
 864478c9feff9a616396a52783aef295 *man/Kfactors.Rd
-598594d9d4c04a113591af2508c80e59 *man/Peptides-package.Rd
+7e02b4766f11daf1bb807a070aba739f *man/Peptides-package.Rd
 c6a2b6ff9f0a7583e69fc3df652bda0f *man/aacomp.Rd
 abf85db4e18a2f3050f6a55829bfe202 *man/aindex.Rd
 acf9d11ece3ffadab3755a37b35ec7b5 *man/boman.Rd
@@ -48,7 +48,7 @@ ff9935c9ed490fcd948c372e99895ec6 *man/instaindex.Rd
 69a64a8f4baf75a658525dcfa8e3a48c *man/kidera.Rd
 de9b2d33b95d03680b24fe60a3466155 *man/lengthpep.Rd
 a410535cd65c8eee506c6a6e8a469654 *man/membpos.Rd
-df361e348167f2adc9c90972e6a75e54 *man/mw.Rd
+689143a896ebe020f7bd24dc66bcb4e0 *man/mw.Rd
 1362bb17c29cef7ab5f61f67f27c3c6d *man/pI.Rd
 513d0db824a9607d670c45e320b782e4 *man/pKscales.Rd
 ca2f796983de79f04b68d44e6d2bbc3c *man/pepdata.Rd
