@@ -11,8 +11,8 @@ Calculate physicochemical properties and indices from amino-acid sequences of pe
 \tabular{ll}{
 Package: \tab Peptides\cr
 Type: \tab Package\cr
-Version: \tab 1.1.0\cr
-Date: \tab 2015-06-03\cr
+Version: \tab 1.1.1\cr
+Date: \tab 2015-11-26\cr
 License: \tab GPL-2\cr
 }
 }
